[package]
name = "validator_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-rt = "2.9.0"
lazy_static = "1.4"
parking_lot = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rocksdb="0.21.0"
reqwest = "0.11.20"
ring = "0.17.0"
hex="0.4"
permutohedron = "0.2.4"